# Sudoku

./: CMakeLists.txt  main.cpp
src/: field.cpp  field.hpp
